# MyFFMpegDemo

./: build.gradle  config.gradle  settings.gradle
android_ffmpeg/: build.gradle
android_ffmpeg/jni/: Android.mk  Android_1.mk  Android_2.mk  Android_liyou.mk  Application.mk  app_h264decoder.c  app_mp4muxer.c  app_mp4read.c  h264decoder.c  h265decoder.c  image_convert.c  image_convert.h  mp4muxer.c  mp4read.c  yuv_jni.c
android_ffmpeg/jni/include/arm64-v8a/libffmpeg/: config.h
android_ffmpeg/jni/include/armeabi-v7a/libffmpeg/: config.h
android_ffmpeg/jni/include/armeabi/libffmpeg/: config.h
android_ffmpeg/src/androidTest/java/com/example/android_ffmpeg/: ExampleInstrumentedTest.java
android_ffmpeg/src/main/: AndroidManifest.xml
android_ffmpeg/src/main/java/com/example/android_ffmpeg/: MainActivity.java
android_ffmpeg/src/main/res/values/: strings.xml  themes.xml
android_ffmpeg/src/main/res/values-night/: themes.xml
android_ffmpeg/src/test/java/com/example/android_ffmpeg/: ExampleUnitTest.java
ffmpeg-audio-encode/: build.gradle
ffmpeg-camera-encode/: build.gradle
ffmpeg-single-decode/: build.gradle
ffmpeg-stream-mp4/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
myffdemo/: CMakeLists.txt  CMakeLists_backup.txt  build.gradle
myffdemo/src/main/: AndroidManifest.xml
myffdemo/src/main/cpp/: myopengl.cpp  myopensl.cpp  native-lib.cpp
myffdemo/src/main/java/com/example/myffdemo/: FetureListActivity.java  LogUtil.java  MainActivity.java  NativeLib.java
myffdemo/src/main/java/com/example/myffdemo/features/: GLSurfaceActivity.java  TestOpenActivity.java  XplayActivity.java
myffdemo/src/main/java/com/example/myffdemo/util/: ScreenUtil.java
myffdemo/src/main/java/com/example/myffdemo/view/: MySurfaceView.java  XPlay.java
myffdemo/src/main/res/layout/: activity_feture_list.xml  activity_glsurfaceview.xml  activity_main.xml  activity_test_open_layout.xml  activity_xplay.xml
myffdemo/src/main/res/values/: strings.xml
myffdemo/src/test/java/com/example/myffdemo/: ExampleUnitTest.java
myffmpeglibrary/: build.gradle  readme.md
myffmpeglibrary/libs/arm64-v8a/include/libavutil/: ffversion.h
myffmpeglibrary/src/main/: AndroidManifest.xml
myffmpeglibrary/src/test/java/com/example/myffmpeglibrary/: ExampleUnitTest.java
xplay/: CMakeLists.txt  build.gradle
xplay/src/main/: AndroidManifest.xml
xplay/src/main/cpp/: FFDecode.cpp  FFDecode.h  FFDemux.cpp  FFDemux.h  FFPlayerBuilder.cpp  FFPlayerBuilder.h  FFResample.cpp  FFResample.h  GLVideoView.cpp  GLVideoView.h  IAudioPlay.cpp  IAudioPlay.h  IDecode.cpp  IDecode.h  IDemux.cpp  IDemux.h  IObserver.cpp  IObserver.h  IPlayer.cpp  IPlayer.h  IPlayerBuilder.cpp  IPlayerBuilder.h  IPlayerPorxy.cpp  IPlayerPorxy.h  IResample.cpp  IResample.h  IVideoView.cpp  IVideoView.h  SLAudioPlay.cpp  SLAudioPlay.h  XData.cpp  XData.h  XEGL.cpp  XEGL.h  XLog.cpp  XLog.h  XParameter.cpp  XParameter.h  XShader.cpp  XShader.h  (+6 more)
xplay/src/main/java/com/lyhao/xplay/: MainActivity.java  NativeLib.java  XPlay.java
xplay/src/main/res/layout/: activity_main.xml
xplay/src/main/res/values/: strings.xml
xplay/src/test/java/com/lyhao/xplay/: ExampleUnitTest.java
